--- a/partials/weekly.htm
+++ b/partials/weekly.htm
@@ -1,55 +1,53 @@
 <div id="content">
-    <div class="notify" ng-show="welcomedisplay">
-        <p>Je paar wekelijkse vragen om te checken hoe je je voelt op het werk</p>
-        <form ng-submit="startTest()" class="buttoncent">
-            <input class="btn btn-blue" type="submit" value="Begin wekelijkse check">
-        </form>
-    </div>
+  <div class="notify" ng-show="welcomedisplay">
+    <p>Je paar wekelijkse vragen om te checken hoe je je voelt op het werk</p>
+    <form ng-submit="startTest()" class="buttoncent">
+      <input class="btn btn-blue" type="submit" value="Begin wekelijkse check" data-page="wekelijks" data-sub="start" data-type="button">
+    </form>
+  </div>
 
-    <div class="notify" ng-show="duplicatedisplay">
-        <p>Je hebt de wekelijkse vragen voor deze week al gedaan.</p>
-        <form ng-submit="getProfile()" class="buttoncent">
-            <input type="submit" value="Ga naar profiel" class="btn btn-blue">
-        </form>
-    </div>
-    
-    <div class="notify" ng-show="nonulmetingdisplay">
-        <p>Je hebt de nulmeting nog niet gedaan en afgerond. Doe dit eerst.</p>
-        <form ng-submit="getNulmeting()" class="buttoncent">
-            <input type="submit" value="Nulmeting" class="btn btn-blue">
-        </form>
-    </div>    
+  <div class="notify" ng-show="duplicatedisplay">
+    <p>Je hebt de wekelijkse vragen voor deze week al gedaan.</p>
+    <form ng-submit="getProfile()" class="buttoncent">
+      <input type="submit" value="Ga naar profiel" class="btn btn-blue" data-page="wekelijks" data-sub="afgerond" data-type="button">
+    </form>
+  </div>
 
-    <div ng-show="questionsdisplay">
-        <div ng-repeat="questionSet in questions" id="{{ questionSet.gebied }}" ng-init="gebiedIndex = $index">
-            <div ng-repeat="question in questionSet.values" ng-init="vraagIndex = $index" class="questions">
-                <div ng-if="question.basis" ng-show="question.display" class="question">
-                    <div class="progress progressbar" ng-if="gebiedIndex < 3">vraag {{ gebiedIndex + 1 }} van {{ questions.length - 1 }}</div>
-                    <div class="progress progressbar" ng-if="gebiedIndex == 3">vraag {{ gebiedIndex }} van {{ questions.length - 1 }}</div>
-                    <div class="progresssub" ng-if="(gebiedIndex == 2 || gebiedIndex == 3) && vraagIndex !== 0">subvraag {{ vraagIndex }} van {{ questionSet.values.length - 1 }}</div>
-                    <div class="detail">{{ question.q }}</div>
-                    <div class="responseops">
-                        <input type="radio" ng-model="basis_answer" value="y" ng-change="changedB(basis_answer, '{{ questionSet.gebied }}', '{{ question.basisType }}', {{ gebiedIndex }}, {{ vraagIndex }})" name="{{ questionSet.gebied }}-{{ question.basisType }}-ba" id="{{ questionSet.gebied }}-{{ question.basisType }}-Y"
-                        class="yn" />
-                        <label for="{{ questionSet.gebied }}-{{ question.basisType }}-Y">Ja</label>
-                        <input type="radio" ng-model="basis_answer" value="n" ng-change="changedB(basis_answer, '{{ questionSet.gebied }}', '{{ question.basisType }}', {{ gebiedIndex }}, {{ vraagIndex }})" name="{{ questionSet.gebied }}-{{ question.basisType }}-ba" id="{{ questionSet.gebied }}-{{ question.basisType }}-N"
-                        class="yn" />
-                        <label for="{{ questionSet.gebied }}-{{ question.basisType }}-N">Nee</label>
-                    </div>
-                </div>
-                <!-- Stress & Vermoeidheid Followup -->
-                <div ng-if="!question.basis" ng-show="question.display" class="question">
-                    <div class="progress progressbar">vraag {{ gebiedIndex + 1 }} van {{ questions.length - 1 }}</div>
-                    <div class="progresssub">subvraag {{ vraagIndex }} van {{ questionSet.values.length - 1 }}</div>
-                    <div class="detail">{{ question.q }}</div>
-                    <div class="responseops">
-                         <span ng-repeat="n in (question.pos ? posvalues : negvalues)">
-                         <input type="radio" ng-model="gebied_answer" value="{{ n.val }}" ng-change="changedD(gebied_answer, '{{ question.subgebied }}', {{ question.index }}, {{ gebiedIndex }}, {{ vraagIndex }})" name="{{ questionSet.gebied }}-{{ vraagIndex }}" id="{{ questionSet.gebied }}-{{ vraagIndex }}-{{ n.val}}"/>
-                     <label for="{{ questionSet.gebied }}-{{ vraagIndex }}-{{ n.val }}">{{ n.label[question.ro] }}</label>
-                     </span>
-                    </div>
-                </div>
-            </div>
+  <div class="notify" ng-show="nonulmetingdisplay">
+    <p>Je hebt de nulmeting nog niet gedaan en afgerond. Doe dit eerst.</p>
+    <form ng-submit="getNulmeting()" class="buttoncent">
+      <input type="submit" value="Nulmeting" class="btn btn-blue" data-page="wekelijks" data-sub="finish" data-type="button">
+    </form>
+  </div>
+
+  <div ng-show="questionsdisplay">
+    <div ng-repeat="questionSet in questions" id="{{ questionSet.gebied }}" ng-init="gebiedIndex = $index">
+      <div ng-repeat="question in questionSet.values" ng-init="vraagIndex = $index" class="questions">
+        <div ng-if="question.basis" ng-show="question.display" class="question">
+          <div class="progress progressbar" ng-if="gebiedIndex < 3">vraag {{ gebiedIndex + 1 }} van {{ questions.length - 1 }}</div>
+          <div class="progress progressbar" ng-if="gebiedIndex == 3">vraag {{ gebiedIndex }} van {{ questions.length - 1 }}</div>
+          <div class="progresssub" ng-if="(gebiedIndex == 2 || gebiedIndex == 3) && vraagIndex !== 0">subvraag {{ vraagIndex }} van {{ questionSet.values.length - 1 }}</div>
+          <div class="detail">{{ question.q }}</div>
+          <div class="responseops">
+            <input type="radio" ng-model="basis_answer" value="y" ng-change="changedB(basis_answer, '{{ questionSet.gebied }}', '{{ question.basisType }}', {{ gebiedIndex }}, {{ vraagIndex }})" name="{{ questionSet.gebied }}-{{ question.basisType }}-ba" id="{{ questionSet.gebied }}-{{ question.basisType }}-Y" class="yn radio"/>
+            <label for="{{ questionSet.gebied }}-{{ question.basisType }}-Y" data-page="wekelijks" data-sub="test" data-type="option">Ja</label>
+            <input type="radio" ng-model="basis_answer" value="n" ng-change="changedB(basis_answer, '{{ questionSet.gebied }}', '{{ question.basisType }}', {{ gebiedIndex }}, {{ vraagIndex }})" name="{{ questionSet.gebied }}-{{ question.basisType }}-ba" id="{{ questionSet.gebied }}-{{ question.basisType }}-N" class="yn radio" />
+            <label for="{{ questionSet.gebied }}-{{ question.basisType }}-N" data-page="wekelijks" data-sub="test" data-type="option">Nee</label>
+          </div>
         </div>
+        <!-- Stress & Vermoeidheid Followup -->
+        <div ng-if="!question.basis" ng-show="question.display" class="question">
+          <div class="progress progressbar">vraag {{ gebiedIndex + 1 }} van {{ questions.length - 1 }}</div>
+          <div class="progresssub">subvraag {{ vraagIndex }} van {{ questionSet.values.length - 1 }}</div>
+          <div class="detail">{{ question.q }}</div>
+          <div class="responseops">
+            <span ng-repeat="n in (question.pos ? posvalues : negvalues)">
+              <input type="radio" ng-model="gebied_answer" value="{{ n.val }}" ng-change="changedD(gebied_answer, '{{ question.subgebied }}', {{ question.index }}, {{ gebiedIndex }}, {{ vraagIndex }})" name="{{ questionSet.gebied }}-{{ vraagIndex }}" id="{{ questionSet.gebied }}-{{ vraagIndex }}-{{ n.val}}" class="radio"/>
+              <label for="{{ questionSet.gebied }}-{{ vraagIndex }}-{{ n.val }}" data-page="wekelijks" data-sub="test" data-type="option">{{ n.label[question.ro] }}</label>
+            </span>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </div>
