--- a/partials/personalitytest.htm
+++ b/partials/personalitytest.htm
@@ -1,7 +1,7 @@
 <div id="content">
   <div class="notify" ng-show="startfromflowdisplay">
     <p>Om een advies op maat te kunnen geven moeten we meer over je persoonlijkheid weten. Klik op onderstaande knop om de persoonlijkheidstest te beginnen.</p>
-    <p>De test bestaat uit 40 vragen en is eenmalig. Heb je nu geen zin of tijd om deze nu in te vullen, doe de test dan op een ander moment. Maar pas als je de test hebt gedaan krijg je een beter beeld van je problemen en een startpunt voor een ontwikkelingstraject.</p>
+    <p>De test bestaat uit 40 vragen en is eenmalig. Heb je nu geen zin of tijd om deze in te vullen, doe de test dan op een ander moment. Maar pas als je de test hebt gedaan krijg je een beter beeld van je problemen en een startpunt voor een ontwikkelingstraject.</p>
     <form ng-submit="startPersonality('new')" class="buttoncent">
       <input class="btn btn-blue" type="submit" value="Begin de persoonlijkheidstest" data-page="persoonlijkheidstest" data-sub="start" data-type="button">
     </form>
