--- a/assets/style.css
+++ b/assets/style.css
@@ -1,469 +1,586 @@
 body {
-    background: lightseagreen;
-    margin: 0 auto;
-    width: auto;
-    max-width: 860px;
-    font-size: 120%;
-    line-height: 140%;
-    font-family: Arial;
+  background: lightseagreen;
+  margin: 0 auto;
+  width: auto;
+  max-width: 860px;
+  font-size: 120%;
+  line-height: 140%;
+  font-family: Arial;
 }
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 p {
-    text-align: justify;
-    text-align-last: center;
+  text-align: justify;
+  text-align-last: center;
 }
 #header {
-    background: #fff;
-    padding: 20px;
+  background: #fff;
+  padding: 20px;
 }
 #header img {
-    width: 40%;
-    max-height: 50px;
-    margin: auto;
-    display: table-cell;
+  width: 40%;
+  max-height: 50px;
+  margin: auto;
+  display: table-cell;
 }
-#content {
-    color: #fff;
-    padding: 40px 0%;
+#content, #loginunit {
+  color: #fff;
+  padding: 40px 0%;
 }
 #content-2 {
-    color: #333d3f;
-    background: #d6cecc;
-    padding: 40px 0%;
-    height: calc(100% - 90px);
+  color: #333d3f;
+  background: #d6cecc;
+  padding: 40px 0%;
+}
+.contentheight {
+  height: calc(100% - 90px);
 }
 .np {
-    position: relative;
-    top: 200;
-    z-index: 1;
+  position: relative;
+  top: 200;
+  z-index: 1;
 }
 .prev {
-    float: left;
+  float: left;
 }
 .next {
-    float: right;
+  float: right;
 }
 .chart-title {
-    text-align: center;
-    margin-bottom: 10px;
+  text-align: center;
+  margin-bottom: 10px;
 }
 .chart {
-    width: 80%;
-    margin: auto;
-    padding-bottom: 10px;
+  width: 80%;
+  margin: auto;
+  padding-bottom: 10px;
+}
+.chart2 {
+  width: 94%;
+  margin: auto;
+  padding-bottom: 10px;
 }
 .notify, .questions {
-    padding: 0 5%;
+  padding: 0 5%;
 }
 .question {
-    opacity:1;
-    text-align: center;
+  opacity:1;
+  text-align: center;
 }
 .question.ng-hide {
-    transition: all linear 0.5s;
-    opacity:0;
+  transition: all linear 0.5s;
+  opacity:0;
 }
 .test .question {
-    margin-bottom: 50px;
+  margin-bottom: 50px;
 }
 .question .detail {
-    padding: 5px 5% 0;
-    clear: both;
+  padding: 5px 5% 0;
+  clear: both;
 }
 .question .responseops {
-    margin: 0 auto;
+  margin: 0 auto;
 }
 input[type=radio] {
-    display: none;
-    margin: 10px;
+  display: none;
+  margin: 10px;
 }
 input[type=radio] + label {
-    display: inline-block;
-    padding: 15px 0px;
-    background-color: #d6cecc;
-    border-color: #ddd;
-    color: #333d3f;
-    width: 80%;
-    margin: 10px auto;
+  display: inline-block;
+  padding: 15px 0px;
+  background-color: #d6cecc;
+  border-color: #ddd;
+  color: #333d3f;
+  width: 80%;
+  margin: 10px auto;
 }
 input[type=radio]:checked + label {
-    background-color: #333d3f;
-    color: #d6cecc;
+  background-color: #333d3f;
+  color: #d6cecc;
 }
 .progressbar {
-    margin: -30px 0 10px 0;
+  margin: -30px 0 10px 0;
 }
 .progress {
-    font-size: 70%;
-    position: absolute;
-    left: calc(50% - 45px);
+  font-size: 70%;
+  position: absolute;
+  left: calc(50% - 45px);
 }
 .progresssub {
-    font-size: 70%;
-    position: relative;
-    top: -10px;
+  font-size: 70%;
+  position: relative;
+  top: -10px;
 }
 .adminquest {
-    clear: both;
-    height: 60px;
+  clear: both;
+  height: 60px;
 }
 .admin .result label {
-    float: left;
-    font-size: 60%;
-    width: 30%;
-    overflow: hidden;
+  float: left;
+  font-size: 60%;
+  width: 30%;
+  overflow: hidden;
 }
 .admin .result .label2 {
-    width: 10% !important;
+  width: 10% !important;
 }
 .admin .result .nulmetingvraag, .admin .result .weekvraag, .admin .result .pos, .admin .result .ro, .admin .result .testvraag, .admin .result .gebied {
-    font-size: 60%;
-    float: right;
+  font-size: 60%;
+  float: right;
 }
 .admin .result .nulmetingvraag, .admin .result .weekvraag {
-    width: 50%;
+  width: 50%;
 }
 .admin .result .testvraag {
-    width: 40%;
+  width: 40%;
 }
 .admin .result .gebied {
-    width: 10%;
+  width: 10%;
 }
 .admin .result .pos, .admin .ro {
-    width: 5%;
+  width: 5%;
 }
 .admin .result .profiel {
-    width: 60%;
+  width: 60%;
 }
 .admin .label, .admin input {
-    height: 30px;
-    vertical-align: middle;
+  height: 30px;
+  vertical-align: middle;
 }
 .admin .extra {
-    font-size: 60%;
-    line-height: 150%;
+  font-size: 60%;
+  line-height: 150%;
 }
 .formalign {
-    margin-bottom: 0;
+  margin-bottom: 0;
 }
 .spacer {
-    margin: 0 10px;
+  margin: 0 10px;
 }
 .floatl {
-    float: left;
+  float: left;
 }
 #verify {
-    display: none;
-    background: white;
-    margin: 5%;
-    padding: 20px;
-    color: red;
-    text-align: justify;
+  display: none;
+  background: white;
+  margin: 5%;
+  padding: 20px;
+  color: red;
+  text-align: justify;
 }
 .examplecont {
-    background: #d6cecc;
-    margin: 20px 0;
-    width: 100vw;
-    margin-left: calc(-50vw + 50%);
+  background: #d6cecc;
+  margin: 20px 0;
+  width: 100vw;
+  margin-left: calc(-50vw + 50%);
 }
 .exampletext {
-    color: #333d3f;
-    font-size: 80%;
-    line-height: 120%;
-    padding: 10px 5%;
+  color: #333d3f;
+  font-size: 80%;
+  line-height: 120%;
+  padding: 10px 5%;
 }
 /*
 .button.menu, #profile_app .button.advies {
-    display: inline-block;
-    margin-right: 5px;
-    padding: 10px;
+display: inline-block;
+margin-right: 5px;
+padding: 10px;
 }
 #page_questions .container {
-    float: left;
-    padding-right: 50px;
+float: left;
+padding-right: 50px;
 }
 #page_questions div:not(.container) {
-    width: 850px;
-    clear: both;
+width: 850px;
+clear: both;
 }
 #page_questions #questions input[type="text"], #page_questions #profile input[type="text"] {
-    float: right;
-    margin-bottom: 20px;
+float: right;
+margin-bottom: 20px;
 }
 #page_questions .weekvraag, #page_questions .nulmetingvraag, #page_questions .profiel {
-    width: 580px;
+width: 580px;
 }
 #page_questions #questions .gebied {
-    width: 100px;
+width: 100px;
 }
 #page_questions #questions .testvraag {
-    width: 480px;
+width: 480px;
 }
 #page_questions #questions input[type="checkbox"] {
-    width: 20px;
-    float: right;
-    margin-bottom: 20px;
+width: 20px;
+float: right;
+margin-bottom: 20px;
 }
 #page_questions #settings input {
-    width: 100px;
-    float: right;
+width: 100px;
+float: right;
 }
 #page_questions #settings label {
-    float: left;
-    width: 650px;
-    margin-bottom: 20px;
+float: left;
+width: 650px;
+margin-bottom: 20px;
 }
 #page_userdata {
-    background: lightseagreen;
-    color: white;
-    font-size: 16px;
-    font-family: Arial;
+background: lightseagreen;
+color: white;
+font-size: 16px;
+font-family: Arial;
 }
 #page_userdata thead {
-    font-weight: bold;
+font-weight: bold;
 }
 #page_userdata table {
-    border-collapse: collapse;
+border-collapse: collapse;
 }
 #page_userdata td {
-    text-align: center;
-    border: 1px solid black;
-    padding: 5px;
+text-align: center;
+border: 1px solid black;
+padding: 5px;
 }
 */
 
 /*=======================*/
 
 /* Spinner */
- .spinner {
-    margin: 100px auto;
-    width: 50px;
-    height: 40px;
-    text-align: center;
-    font-size: 10px;
+.spinner {
+  margin: 100px auto;
+  width: 50px;
+  height: 40px;
+  text-align: center;
+  font-size: 10px;
 }
 .spinner > div {
-    background-color: #333;
-    height: 100%;
-    width: 6px;
-    display: inline-block;
-    -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
-    animation: sk-stretchdelay 1.2s infinite ease-in-out;
+  background-color: #333;
+  height: 100%;
+  width: 6px;
+  display: inline-block;
+  -webkit-animation: sk-stretchdelay 1.2s infinite ease-in-out;
+  animation: sk-stretchdelay 1.2s infinite ease-in-out;
 }
 .spinner .rect2 {
-    -webkit-animation-delay: -1.1s;
-    animation-delay: -1.1s;
+  -webkit-animation-delay: -1.1s;
+  animation-delay: -1.1s;
 }
 .spinner .rect3 {
-    -webkit-animation-delay: -1.0s;
-    animation-delay: -1.0s;
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
 }
 .spinner .rect4 {
-    -webkit-animation-delay: -0.9s;
-    animation-delay: -0.9s;
+  -webkit-animation-delay: -0.9s;
+  animation-delay: -0.9s;
 }
 .spinner .rect5 {
-    -webkit-animation-delay: -0.8s;
-    animation-delay: -0.8s;
+  -webkit-animation-delay: -0.8s;
+  animation-delay: -0.8s;
 }
 @-webkit-keyframes sk-stretchdelay {
-    0%, 40%, 100% {
-        -webkit-transform: scaleY(0.4)
-    }
-    20% {
-        -webkit-transform: scaleY(1.0)
-    }
+  0%, 40%, 100% {
+    -webkit-transform: scaleY(0.4)
+  }
+  20% {
+    -webkit-transform: scaleY(1.0)
+  }
 }
 @keyframes sk-stretchdelay {
-    0%, 40%, 100% {
-        transform: scaleY(0.4);
-        -webkit-transform: scaleY(0.4);
-    }
-    20% {
-        transform: scaleY(1.0);
-        -webkit-transform: scaleY(1.0);
-    }
+  0%, 40%, 100% {
+    transform: scaleY(0.4);
+    -webkit-transform: scaleY(0.4);
+  }
+  20% {
+    transform: scaleY(1.0);
+    -webkit-transform: scaleY(1.0);
+  }
 }
 /*=======================*/
 
 /* Buttons & Input */
- .btn {
-    display: inline-block;
-    color: #666;
-    background-color: #eee;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-size: 75%;
-    padding: 18px;
-    border-radius: 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    border-bottom-width: 3px;
+.btn {
+  display: inline-block;
+  color: #666;
+  background-color: #eee;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 75%;
+  padding: 18px;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-bottom-width: 3px;
 }
 .btnsmall {
-    display: inline-block;
-    color: #666;
-    background-color: #eee;
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-size: 60%;
-    padding: 5px 10px;
-    border-radius: 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    border-bottom-width: 3px;
+  display: inline-block;
+  color: #666;
+  background-color: #eee;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 60%;
+  padding: 5px 10px;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-bottom-width: 3px;
 }
 .btnprev {
-    float: left;
-    margin-left: 5%;
+  float: left;
+  margin-left: 5%;
 }
 .btnnext {
-    float: right;
-    margin-right: 5%;
+  float: right;
+  margin-right: 5%;
 }
 .btn:hover {
-    background-color: #e3e3e3;
-    border-color: rgba(0, 0, 0, 0.5);
+  background-color: #e3e3e3;
+  border-color: rgba(0, 0, 0, 0.5);
 }
 .btn:active {
-    background-color: #CCC;
-    border-color: rgba(0, 0, 0, 0.9);
+  background-color: #CCC;
+  border-color: rgba(0, 0, 0, 0.9);
 }
-/* blue button */
- .btn.btn-blue {
-    background-color: #699DB6;
-    border-color: rgba(0, 0, 0, 0.3);
-    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
-    color: #FFF;
+.btn.btn-blue {
+  background-color: #699DB6;
+  border-color: rgba(0, 0, 0, 0.3);
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
+  color: #FFF;
 }
 .btn.btn-blue:hover {
-    background-color: #4F87A2;
-    border-color: rgba(0, 0, 0, 0.5);
+  background-color: #4F87A2;
+  border-color: rgba(0, 0, 0, 0.5);
 }
 .btn.btn-blue:active {
-    background-color: #3C677B;
-    border-color: rgba(0, 0, 0, 0.9);
+  background-color: #3C677B;
+  border-color: rgba(0, 0, 0, 0.9);
 }
-/* red button */
- .btn.btn-red {
-    background-color: #E48681;
-    border-color: rgba(0, 0, 0, 0.3);
-    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
-    color: #FFF;
+.btn.btn-red {
+  background-color: #E48681;
+  border-color: rgba(0, 0, 0, 0.3);
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.5);
+  color: #FFF;
 }
 .btn.btn-red:hover {
-    background-color: #DA4F49;
-    border-color: rgba(0, 0, 0, 0.5);
+  background-color: #DA4F49;
+  border-color: rgba(0, 0, 0, 0.5);
 }
 .btn.btn-red:active {
-    background-color: #B32C24;
-    border-color: rgba(0, 0, 0, 0.9);
+  background-color: #B32C24;
+  border-color: rgba(0, 0, 0, 0.9);
 }
 /* input */
- .btninput {
-    color: #666;
-    font-size: 16px;
-    padding: 18px 30px;
-    margin-bottom: 30px;
-    border-radius: 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    border: 1px solid rgba(0, 0, 0, 0.3);
-    border-bottom-width: 3px;
+.btninput {
+  color: #666;
+  font-size: 16px;
+  padding: 18px 30px;
+  margin-bottom: 30px;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-bottom-width: 3px;
 }
 .btn100 {
-    width: 100%;
+  width: 100%;
 }
 .btn75 {
-    width: 75%;
+  width: 75%;
 }
 .btnminwidth {
-    min-width: 100px;
+  min-width: 100px;
 }
 .buttonclose {
-    float:right;
-    margin-top:-30px;
-    margin-right:-30px;
-    display:block;
-    box-sizing:border-box;
-    width:20px;
-    height:20px;
-    border-style: solid;
-    border-radius:100%;
-    background: -webkit-linear-gradient(-45deg, transparent 0%, transparent 46%, white 46%, white 56%, transparent 56%, transparent 100%), -webkit-linear-gradient(45deg, transparent 0%, transparent 46%, white 46%, white 56%, transparent 56%, transparent 100%);
-    background-color:red;
-    box-shadow:0px 0px 5px 2px rgba(0, 0, 0, 0.5);
+  float:right;
+  margin-top:-30px;
+  margin-right:-30px;
+  display:block;
+  box-sizing:border-box;
+  width:20px;
+  height:20px;
+  border-style: solid;
+  border-radius:100%;
+  background: -webkit-linear-gradient(-45deg, transparent 0%, transparent 46%, white 46%, white 56%, transparent 56%, transparent 100%), -webkit-linear-gradient(45deg, transparent 0%, transparent 46%, white 46%, white 56%, transparent 56%, transparent 100%);
+  background-color:red;
+  box-shadow:0px 0px 5px 2px rgba(0, 0, 0, 0.5);
 }
 .buttoncent {
-    text-align: center;
+  text-align: center;
 }
 .buttoninline {
-    display: inline-block;
+  display: inline-block;
 }
 .buttonmarg {
-margin-bottom: 20px;
+  margin-bottom: 20px;
 }
+.button48 {
+  width: 48%;
+  max-width: 200px;
+}
+.dropdown-toggle {
+  background-color: #fff;
+  border: none;
+  min-width: 220px;
+}
+.dropdown-menu {
+  color: #666;
+  background-color: #fff;
+  font-size: 16px;
+  padding: 18px 10px;
+  margin: 0;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-bottom-width: 3px;
+}
+.dropdown-menu li {
+  display: block;
+}
+.caret {
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: 2px;
+  vertical-align: middle;
+  border-top: 4px dashed;
+  border-top: 4px solid\9;
+  border-right: 4px solid transparent;
+  border-left: 4px solid transparent;
+}
+.navlinks {
+  position: absolute;
+  width: 100%;
+  max-width: 860px;
+  bottom: 0;
+}
+.btnwidth {
+  width: 23.8%;
+  font-size: 55%;
+  padding: 18px 2px;
+}
+
 /*=======================*/
 
 /* Tabs */
- .tab {
-    border: 1px solid #333d3f;
-    border-bottom-width: 0;
-    margin-right: 20px;
-    padding: 8px 10px 0px 10px;
-    background-color: #d6cecc;
-    color: #333d3f;
-    display: inline-block;
-    white-space: normal;
+.tab {
+  border: 1px solid #333d3f;
+  border-bottom-width: 0;
+  margin-right: 20px;
+  padding: 8px 10px 0px 10px;
+  background-color: #d6cecc;
+  color: #333d3f;
+  display: inline-block;
+  white-space: normal;
 }
 .activetab {
-    background-color: #333d3f;
-    color: #fff;
+  background-color: #333d3f;
+  color: #fff;
+}
+.activetab.func, .resultfunc {
+  background-color: #111d3f !important;
 }
 .tabcontainer {
-    overflow-x: scroll;
-    white-space: nowrap;
+  overflow-x: scroll;
+  white-space: nowrap;
 }
 .tabcontainer::-webkit-scrollbar {
-    display: none;
+  display: none;
 }
 .result {
-    clear: both;
-    background: #333d3f;
-    padding: 30px 5%;
+  clear: both;
+  background: #333d3f;
+  padding: 30px 5%;
 }
 .result2 {
-    clear: both;
-    background: #333d3f;
-    padding: 20px 5% 1px;
+  clear: both;
+  background: #333d3f;
+  padding: 20px 5% 1px;
 }
+.result3 {
+  clear: both;
+  background: #d6cecc;
+}
+
 /*=======================*/
- .is-invisible {
-    opacity: 0;
+.is-invisible {
+  opacity: 0;
 }
 .subscription-details {
-    transition: opacity 1s;
+  transition: opacity 1s;
 }
+
 /*=======================*/
 
 /* Lists experimenteel */
- ul.box {
-    padding: 0;
+ul.box {
+  padding: 0;
 }
 li.box {
-    list-style: none;
-    background: #d6cecc;
-    padding: 10px 20px;
-    border-radius: 10px;
-    text-align: center;
-    color: #333d3f;
-    margin: 10px 0;
+  list-style: none;
+  background: #d6cecc;
+  padding: 10px 20px;
+  border-radius: 10px;
+  text-align: center;
+  color: #333d3f;
+  margin: 10px 0;
+}
+li.box2 {
+  list-style: none;
+  background: #333d3f;
+  padding: 10px 20px;
+  border-radius: 10px;
+  text-align: center;
+  color: #d6cecc;
+  margin: 10px 0;
 }
 ol {
-    padding-left: 5%;
-    text-align: justify;
+  padding-left: 5%;
+  text-align: justify;
+}
+/*=======================*/
+
+/* Login */
+.smalltext {
+  font-size: 80%;
+}
+.underline {
+  text-decoration: underline;
+}
+.topspace {
+  margin-top: 10px;
+}
+.error {
+  margin: -20px 0px 30px 20px;
+  font-size: 80%;
+  font-weight: bold;
+}
+
+/*=======================*/
+
+/* Table */
+table {
+  color: #FFF;
+  width: 100%;
+  font-size: 100%;
+  margin-top: 40px;
+}
+th, td {
+  text-align: left;
+}
+
+/*=======================*/
+
+/* Icons */
+.info {
+  width: 24px;
+  vertical-align: bottom;
+  margin-left: 20px;
+}
+.itext {
+  font-size: 80%;
+  margin-left: 10px;
+  font-style: italic;
+  border: 0.5px solid grey;
+  padding: 5px 10px;
+  vertical-align: top;
 }
