--- a/partials/profile.htm
+++ b/partials/profile.htm
@@ -1,4 +1,4 @@
-<div id="content-2">
+<div id="content-2" class="contentheight">
   <img src="https://cdn3.iconfinder.com/data/icons/faticons/32/arrow-left-01-512.png" width="30" ng-click="showPrev(gid)" class="np prev" data-page="profiel" data-type="button-small">
   <img src="https://cdn3.iconfinder.com/data/icons/faticons/32/arrow-right-01-512.png" width="30" ng-click="showNext(gid)" class="np next" data-page="profiel" data-type="button-small">
 
