--- a/partials/results.htm
+++ b/partials/results.htm
@@ -1,6 +1,6 @@
 <div id="content">
   <div class="tabcontainer">
-    <div ng-repeat="tab in tabs" class="tab" ng-click="onClickTab(tab)" ng-class="{'activetab':isActiveTab(tab)}" data-page="testresultaten" data-type="tab">{{ tab }}</div>
+    <div ng-repeat="tab in tabs" class="tab" ng-click="onClickTab(tab)" ng-class="{'activetab':isActiveTab(tab)}" data-page="testresultaten" data-sub="tab" data-type="tab">{{ tab }}</div>
   </div>
   <div ng-repeat="(key, value) in results.lastresults" ng-show="value.display" ng-if="homedisplay" class="result">
     <!-- Archief -->
@@ -8,7 +8,7 @@
       <input type="submit" value="Ga verder" class="btn btn-blue" data-page="testresultaten" data-sub="home" data-type="button-top">
     </form>
     <div class="detail">
-      <p>De resultaten van je laatst gemaakte test op het gebied <b>{{ value.name }}</b> zijn:</p>
+      <p>De resultaten van je laatst gemaakte test op het gebied <b>{{ value.name }}</b>:</p>
     </div>
     <ul class="box">
       <li ng-repeat="niveau in value.results.niveaus" class="box">{{ niveau.value }}</li>
@@ -32,7 +32,7 @@
   <div ng-if="gebiedviewdisplay" class="result">
     <p>Dit zijn al je afgeronde testen op het gebied {{ gebiedsnaam }}:</p>
     <form ng-submit="toResult(gebied, metadata.resultnr)" ng-repeat="metadata in metadatas" class="buttoncent" ng-if="metadata.status !== 'pending'">
-      <input type="submit" value="Test van {{ metadata.datum_start }}" class="btn btn-red"data-page="testresultaten" data-sub="gebiedsoverzicht" data-type="button">
+      <input type="submit" value="Test van {{ metadata.datum_start }}" class="btn btn-red" data-page="testresultaten" data-sub="gebiedsoverzicht" data-type="button">
       <br>
     </form>
   </div>
